--- a/blog/templates/blog/blogs_with_type.html
+++ b/blog/templates/blog/blogs_with_type.html
@@ -8,7 +8,7 @@
 
 {% block blog_list_title %}
 	分类：{{ blog_type.type_name }}
-	<a href="{% url 'blog_list' %}">查看全部博客</a>
+	<a href="{% url 'blog_list' %}">查看全部问答</a>
 {% endblock %}
 
 {# 页面内容 #}
