--- a/blog/templates/blog/blog_new.html
+++ b/blog/templates/blog/blog_new.html
@@ -1,20 +1,38 @@
-{% extends "template.html" %}
+{% extends "base.html" %}
 
 
 {% block head %}
-<title>New Blog</title>
+New Blog
 
 {% endblock %}
 
 
 {% block content %}
 
-	<form method="post" enctype="multipart/form-data">
-		{% csrf_token %}
-		{{form.media}}
-		{{form.as_p}}
-		<button type="submit">Create</button>
-	</form>
+<div class="container">
+	<div class="row">
+		<div class="col-xs-10 col-xs-offset-1">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title">课程问答</h3>
+				</div>
+
+				<div class="panel-body">
+					<div class="panel-content">
+
+						<form method="post" enctype="multipart/form-data">
+							{% csrf_token %}
+							{{form.media}}
+							<label>标题</label>&nbsp;{{form.title}}<br>
+							<label>内容</label><br>{{form.content|safe}}<br>
+							<button type="submit" class="btn btn-primary">提交</button>
+						</form>
 	
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>	
+</div>	
 
 {% endblock %}
