--- a/exam/templates/exam/check_answer.html
+++ b/exam/templates/exam/check_answer.html
@@ -1,4 +1,4 @@
-{% extends "template.html" %}
+{% extends "base.html" %}
 
 
 {% block head %}
@@ -8,14 +8,31 @@
 
 
 {% block content %}
-	<p>{{answer.total}}</p>
-	<div>{{answer.answer|safe}}</div>
-	
-	<form method="post" enctype="multipart/form-data">
-		{% csrf_token %}
-		{{form.as_p}}
-		<button type="submit">Submit</button>
-	</form>
-	
+
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-8 col-xs-offset-2">
+				<div class="panel panel-default">
+				  <div class="panel-heading">
+				    <h3 class="panel-title">测试评分</h3>
+				  </div>
+				  <div class="panel-body">
+
+					<p style="margin-top: 0.7em;"><span class="glyphicon glyphicon-star"></span>{{answer.total}}分</p>
+					<h3 style="margin-top: 0.5em;">{{answer.answer|safe}}</h3>
+						
+						
+						<form method="post" enctype="multipart/form-data">
+							{% csrf_token %}
+							<p>评分</p>
+							<input type="number" name="score" class="form-control">
+							<button type="submit" class="btn btn-primary pull-right" style="margin-top: 0.7em;">提交</button>
+						</form>
+
+				  </div>
+				</div>
+			</div>
+		</div>
+	</div>	
 
 {% endblock %}
