--- a/exam/templates/exam/detail_student.html
+++ b/exam/templates/exam/detail_student.html
@@ -1,4 +1,4 @@
-{% extends "template.html" %}
+{% extends "base.html" %}
 
 
 {% block head %}
@@ -9,15 +9,29 @@
 
 {% block content %}
 
-	<a href={% url 'exam_list' exam.course.pk %}>Back</a>
-	<div>{{exam.question|safe}}</div>
-	<h3>{{exam.score}}</h3>
-	
-	<form method="post" enctype="multipart/form-data">
-		{% csrf_token %}
-		{{form.media}}
-		{{form.as_p}}
-		<button type="submit">Submit</button>
-	</form>
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-10 col-xs-offset-1">
+				<div class="panel panel-default">
+				  <div class="panel-heading">
+				    <h3 class="panel-title">回答问题</h3>
+				  </div>
+				  <div class="panel-body">
+
+					<button type="button" class="btn btn-danger" onclick="window.location.href = '{% url 'exam_list' exam.course.pk %}'">后退</button>
+					<h3 style="margin-top: 0.5em;">{{exam.question|safe}}</h3>
+					<p style="margin-top: 0.7em;"><span class="glyphicon glyphicon-star"></span>{{exam.score}}分</p>				
+					<form method="post" enctype="multipart/form-data">
+						{% csrf_token %}
+						{{form.media}}
+						{{form.as_p}}
+						<button type="submit" class="btn btn-primary">提交</button>
+					</form>
+
+				  </div>
+				</div>
+			</div>
+		</div>
+	</div>	
 		
 {% endblock %}
