--- a/exam/templates/exam/teacher.html
+++ b/exam/templates/exam/teacher.html
@@ -1,4 +1,4 @@
-{% extends "template.html" %}
+{% extends "base.html" %}
 
 
 {% block head %}
@@ -10,29 +10,44 @@
 
 
 {% block content %}
-	<p>
-		<a href={% url 'course_list' course.pk %}>Back</a>
-	</p>
-	
-	<a href={% url "new_exam" course.pk %}>New exam</a>
-	<a href={% url 'exam_statistics' course.pk %}>Statistics</a>
-	{% if exams %}
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-8 col-xs-offset-2">
+				<div class="panel panel-default">
+				  <div class="panel-heading">
+				    <h3 class="panel-title">测试教师页面</h3>
+				  </div>
+				  <div class="panel-body">
+					
+						<button type="button" class="btn btn-danger" onclick="window.location.href = '{% url 'course_list' course.pk %}'">后退</button>
+						
 
-		<table>
-			<tr>
-				<th>exam</th>
-			</tr>
-			{% for exam in exams %}
-				<tr>
-					<td>
-						<a href={% url 'exam_detail' exam.pk %}>{{exam.name}}</a>
-					</td>
-				</tr>
-			{% endfor %}
+						<div class="btn-group" role="group" aria-label="...">
+						  <button type="button" class="btn btn-default" onclick="window.location.href = '{% url "new_exam" course.pk %}'">新建测试</button>
+						  <button type="button" class="btn btn-default" onclick="window.location.href = '{% url 'exam_statistics' course.pk %}'">统计数据</button>
+						</div>						
 
-		</table>
-	{% else %}
-		<p>No Exams</p>
-	{% endif %}
+						{% if exams %}
 
+							<table class="table table-hover" style="margin-top: 0.7em;">
+								<tr>
+									<th>exam</th>
+								</tr>
+								{% for exam in exams %}
+									<tr>
+										<td>
+											<a href={% url 'exam_detail' exam.pk %}>{{exam.name}}</a>
+										</td>
+									</tr>
+								{% endfor %}
+
+							</table>
+						{% else %}
+							<p>没有测试</p>
+						{% endif %}
+				  </div>
+				</div>
+			</div>
+		</div>
+	</div>		
 {% endblock %}
