--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -1,8 +1,56 @@
-{% extends "template.html" %}
+{% extends "base.html" %}
 
 
 {% block title %}
 
-	<title>Homepage</title>
+	在线教育网站
+	
+{% endblock %}
 
+{% block content %}
+
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="/static/images/banner-1.png" alt="...">
+      <div class="carousel-caption">
+        	<h3>哈工程在线教育平台</h3>
+        	<p>让成绩科学的提升</p>
+      </div>
+    </div>
+    <div class="item">
+      <img src="/static/images/banner-1.png" alt="...">
+      <div class="carousel-caption">
+        	<h3>哈工程在线教育平台</h3>
+        	<p>让成绩科学的提升</p>
+      </div>
+    </div>
+    <div class="item">
+      <img src="/static/images/banner-1.png" alt="...">
+      <div class="carousel-caption">
+        	<h3>哈工程在线教育平台</h3>
+        	<p>让成绩科学的提升</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 {% endblock %}
