--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 	<div class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="{% url 'index' %}">个人博客网站</a>	
+				<a class="navbar-brand" href="{% url 'index' %}">在线教育网站</a>	
 				<button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -26,6 +26,11 @@
 			<div id="navbar-collapse" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
 					<li class="{% block nav_home_active %}{% endblock %}"><a href="{% url 'index' %}">首页</a></li>
+				{% if not user.is_authenticated %}
+				{% else %}
+					<li><a href={% url "selection" %}>选课</a></li>
+					<li><a href={% url 'profile' %}>个人中心</a></li>
+				{% endif %}
 				</ul>	
 
 		    	<ul class="nav navbar-nav navbar-right">
@@ -36,7 +41,7 @@
 		        	<li class="dropdown">
 		        		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">{{ user.username }} <span class="caret"></span></a>
 		        		<ul class="dropdown-menu">
-				        	<li><a href="#">个人资料</a></li>
+				        	<li><a href="{% url 'profile' %}">个人资料</a></li>
 				        	<li><a href="{% url 'logout' %}?from={{ request.get_full_path }}">登出</a></li>
 		        		</ul>
 		        	</li>
@@ -46,5 +51,19 @@
 		</div>
 	</div>
 	{% block content %}{% endblock %}
+
+	<div class="website-bottom-part">
+	<p></p>
+	</div>
 </body>
 </html>
+
+<style type="text/css">
+	.website-bottom-part{
+		position:relative;
+		bottom: 0px;
+		height: 150px;
+		width: 100%;
+		background-color: #eee;
+	}
+</style>
