--- a/templates/template.html
+++ b/templates/template.html
@@ -1,21 +1,13 @@
-<!doctype html>
+{% extends 'base.html' %}
+{% load staticfiles %}
 
-<html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
-		{% load static %}
-		{% block head %}{% endblock %}
-		
-	</head>
+{% block title %}
+	我的网站|主页
+{% endblock %}
 
-	<body>
-	<div>
-	
-		<a href='/'>homepage</a>
-	
-		{% block account %}
+{% block nav_home_active %}active{% endblock %}
+
+{% block content %}
 			{% if user.is_authenticated %}
 				Hello,
 				&nbsp;
@@ -29,13 +21,4 @@
 				or
 				<a href="{% url 'register' %}?next={{request.path}}">Register</a>
 			{% endif %}
-		{% endblock %}
-	</div>
-	
-		{% block content %}{% endblock %}
-		
-	
-	</body>
-
-
-</html>
+{% endblock %}
