--- a/user_profile/templates/profile/student.html
+++ b/user_profile/templates/profile/student.html
@@ -1,40 +1,61 @@
-{% extends "template.html" %}
+ {% extends "base.html" %}
 
 
 {% block head %}
 
-<title>Student Profile</title>
+Student Profile
 
 
 {% endblock %}
 
 
 {% block content %}
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-8 col-xs-offset-2">
+				<div class="panel panel-default">
+				  <div class="panel-heading">
+				    <h3 class="panel-title">个人课程页面</h3>
+				  </div>
+				  <div class="panel-body">
+					<button id="course-choose-btn" onclick="window.location.href = '{% url "selection" %}' " type="button" class="btn btn-primary">选课</button>
+						{% if courses %}
+						<h3>我的课程</h3>
 
-	<a href={% url "selection" %}>Select</a>
-	
-	{% if courses %}
+							<div class="list-group">								
+							{% for course in courses %}
+							  <a href="/course/{{course.pk}}" class="list-group-item">
+							    <h4 id="course-list-heading" class="list-group-item-heading">{{course.name}}</h4>						    
+							    <p id="course-list-text" class="list-group-item-text">
+								<span class="glyphicon glyphicon-user"></span>
+							    {{course.teacher.username}}</p>
+							    <p id="course-list-text" class="list-group-item-text">{{course.description}}</p>
+							  </a>								
+							{% endfor %}
+							</div>
 
-		<table>
-			<tr>
-				<th>name</th>
-				<th>teacher</th>
-				<th>description</th>
-			</tr>
-			
-			{% for course in courses %}
-				<tr>
-					<td><a href="/course/{{course.pk}}">{{course.name}}</a></td>
-					<td>{{course.teacher.username}}</td>
-					<td>{{course.description}}</td>
-				</tr>
-			
-			{% endfor %}
 
-		</table>
-	{% else %}
-		<p>No Selection</p>
-	{% endif %}
-	
+						{% else %}
+							<p>No Selection</p>
+						{% endif %}
+				  </div>
+				</div>
+			</div>
+		</div>
+	</div>
+{% endblock %}
 
+{% block head_extends %}
+	<style type="text/css">
+		#course-choose-btn{
+			margin-bottom: 1em;
+		}
+		#course-list-heading{
+			color: black;
+		}
+		#course-list-text{
+			color: #aaa;
+			margin-top: 0.3em;
+		}
+	</style>
 {% endblock %}
