--- a/video/templates/video/upload.html
+++ b/video/templates/video/upload.html
@@ -1,19 +1,38 @@
-{% extends "template.html" %}
+{% extends "base.html" %}
 
 {% block head %}
 
-<title>Upload Video</title>
+<title>上传视频</title>
 
 
 {% endblock %}
 
 
 {% block content %}
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-8 col-xs-offset-2">
+				<div class="panel panel-default">
+				  <div class="panel-heading">
+				    <h3 class="panel-title">选课页面</h3>
+				  </div>
+				  <div class="panel-body">
 	
-	<form method="post" enctype="multipart/form-data">
-		{% csrf_token %}
-		{{ form.as_p }}
-		<button type="submit">Upload</button>
-	</form>
-
+					<form method="post" enctype="multipart/form-data">
+						{% csrf_token %}
+						<p class="course-text">课程编号</p>
+						<input name="sorting" type="number" class="form-control">
+						<p class="course-text">课程名称</p>
+						<input name="name" type="text" class="form-control">
+						<p class="course-text">课程描述</p>
+						<textarea name="description" class="form-control" rows="3"></textarea>
+						<p class="course-text">视频文件</p>
+						<input name="source" type="file" class="form-control">
+						<button type="submit" class="btn btn-primary pull-right" style="margin-top: 0.7em;">添加课程</button>
+					</form>
+				  </div>
+				</div>
+			</div>
+		</div>
+	</div>		
 {% endblock %}
